# cc-astrbot-agent

./: .gitignore  CLAUDE.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  test_agent.py
src/cc_agent/: __init__.py  agent.py
src/cc_agent/bridge/: __init__.py  astrbot_bridge.py
src/cc_agent/core/: __init__.py  query_config.py  query_loop.py  token_budget.py  tool_use_context.py
src/cc_agent/services/: __init__.py  api.py  tool_execution.py  tool_orchestration.py
src/cc_agent/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  patch.py  registry.py  scan_project.py
src/cc_agent/types/: __init__.py  messages.py
tests/: test_basic.py  test_patch.py
